--- a/frontend/src/components/Hero/Hero.css
+++ b/frontend/src/components/Hero/Hero.css
@@ -1,5 +1,5 @@
 .hero {
-  background: linear-gradient(180deg, #fde1ff, #e1ffea22 60%);
+  background: #ff9f66;
   display: flex;
   padding-top: 100px;
 }
