--- a/frontend/src/pages/CSS/LoginPages.css
+++ b/frontend/src/pages/CSS/LoginPages.css
@@ -1,9 +1,9 @@
 .loginsignup {
   width: 100%;
   height: auto;
-  background: #ffc55a;
-  padding-top: 50px;
-  padding-bottom: 50px;
+  background: #ff9f66;
+  padding-top: 150px;
+  padding-bottom: 150px;
   display: flex;
   justify-content: center;
   align-items: center;
