--- a/frontend/src/components/Navbar/Navbar.css
+++ b/frontend/src/components/Navbar/Navbar.css
@@ -4,7 +4,10 @@
   padding: 16px 0px;
   box-shadow: 0 1px 3px -2px black;
   align-items: center;
-  background: blue;
+  background: #151515;
+}
+.navbar .Link {
+  text-decoration: none;
 }
 .navbar-logo {
   display: flex;
@@ -22,4 +25,12 @@
   display: flex;
   align-items: center;
   gap: 45px;
+}
+
+.navbar-logo img {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  object-fit: cover;
+  object-position: center;
 }
